<resources>
    <string name="app_name">LogNote</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="lognote">LOGNOTE</string>
    <string name="noteDemo">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less</string>
    <string name="noteTitleDemo">What is Lorem Ipsum?</string>
    <string name="noteTimeDemo">03.00 pm</string>
    <string name="save">save</string>
    <string name="title_activity_an">AnActivity</string>
    <string name="note_title">Type Title Here ...</string>
    <string name="note">Type Note Here ...</string>
    <string name="submit">Submit</string>
</resources>
