<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".NewNoteActivity"
        >

    <data>

        <variable
                name="viewModal"
                type="com.lognote.viewModal.LogViewModal" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <include layout="@layout/toolbar" android:id="@+id/tool"/>
        <EditText
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:background="@color/white"
                android:hint="@string/note_title"
                android:maxLines="3"
                android:minHeight="50sp"
                android:padding="8sp"
                android:text="@={viewModal.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tool"

                />

        <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:background="@color/white"
                android:hint="@string/note"
                android:text="@={viewModal.description}"
                android:minHeight="150sp"
                android:padding="8sp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noteTitle" />



        <Button
                android:layout_width="0sp"
                android:layout_height="60sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/submit"
                android:layout_margin="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/saveBtn"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>